<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/tic_tac_toe_button_top_left"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_top_left"
        android:translationX="-10dp"
        android:translationY="-25dp"
        app:layout_constraintBottom_toTopOf="@+id/tic_tac_toe_button_middle_left"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_top_middle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_top_middle"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_top_middle"
        android:translationY="-25dp"
        app:layout_constraintBottom_toTopOf="@+id/tic_tac_toe_button_middle"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_top_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_top_left" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_top_right"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_top_right"
        android:translationX="10dp"
        android:translationY="-25dp"
        app:layout_constraintBottom_toTopOf="@+id/tic_tac_toe_button_middle_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_top_middle" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_middle_left"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_middle_left"
        android:translationX="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_middle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_middle"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_middle_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_middle_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_middle_right"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_middle_right"
        android:translationX="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_middle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_bottom_left"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_bottom_left"
        android:translationX="-10dp"
        android:translationY="25dp"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_bottom_middle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_button_middle_left" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_bottom_middle"
        style="@style/TicTacToeButton"
        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_bottom_middle"
        android:translationY="25dp"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_bottom_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_bottom_left"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_button_middle" />

    <ImageButton
        android:id="@+id/tic_tac_toe_button_bottom_right"
        style="@style/TicTacToeButton"

        android:background="@color/black"
        android:contentDescription="@string/tic_tac_toe_bottom_right"
        android:translationX="10dp"
        android:translationY="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_bottom_middle"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_button_middle_right" />

    <View
        android:id="@+id/tic_tac_toe_horizontal_0"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:background="@color/white"
        android:translationY="-12.5dp"
        app:layout_constraintBottom_toTopOf="@+id/tic_tac_toe_button_middle_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_button_top_right"
        app:layout_constraintVertical_bias="0.5" />

    <View
        android:id="@+id/tic_tac_toe_horizontal_1"
        android:layout_width="match_parent"
        android:layout_height="23dp"
        android:background="@color/white"
        android:translationY="12.5dp"
        app:layout_constraintBottom_toTopOf="@+id/tic_tac_toe_button_bottom_middle"
        app:layout_constraintTop_toBottomOf="@+id/tic_tac_toe_button_middle"
        tools:layout_editor_absoluteX="-6dp" />

    <View
        android:id="@+id/tic_tac_toe_vertical_0"
        android:layout_width="23dp"
        android:layout_height="400dp"
        android:layout_marginStart="15dp"
        android:background="@color/white"
        android:translationX="-12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_middle"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_middle_left"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/tic_tac_toe_vertical_1"
        android:layout_width="24dp"
        android:layout_height="400dp"
        android:layout_marginEnd="58dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_button_middle_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_button_middle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_board_button_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:text="@string/reset_board_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/tic_tac_toe_o_label"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tic_tac_toe_o" />

    <ImageView
        android:id="@+id/tic_tac_toe_x_label"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tic_tac_toe_x" />

    <TextView
        android:id="@+id/tic_tac_toe_x_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/string_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toEndOf="@+id/tic_tac_toe_x_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tic_tac_toe_o_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:gravity="center"
        android:text="@string/string_0"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@+id/tic_tac_toe_o_label"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>